# auto-embeds-dashboard

./: README.md  app.py  auto_embeds_wandb.py  callbacks.py  data_and_figures.py  layout.py  pyproject.toml  requirements.txt
