[tool.poetry]
name = "auto-embeds-dashboard"
version = "0.1.0"
description = ""
authors = ["Jason Liu <107706694+jl2191@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.22.0"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.2"
torch = "^2.3.0"
ipython = "^8.25.0"
ipykernel = "^6.29.4"
diskcache = "^5.6.3"
joblib = "^1.4.2"
tqdm = "^4.66.4"
wandb = "^0.17.0"
dash = {extras = ["diskcache"], version = "^2.17.0"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
